src/assets/main.scss
@use './base.scss';
@use 'primeflex/primeflex.css';
@use "sass:color";

:root {
	font-size: 14px;
}

@media (min-width: 1200px) {
	:root {
		font-size: 16px !important;
	}
}

body {
	color: var(--color-text);
	background: var(--color-background);
	line-height: 1.2;
	font-family:
		Inter,
		-apple-system,
		BlinkMacSystemFont,
		'Segoe UI',
		Roboto,
		Oxygen,
		Ubuntu,
		Cantarell,
		'Fira Sans',
		'Droid Sans',
		'Helvetica Neue',
		sans-serif;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4, h5, h6 {
	margin-top: 0;
	margin-bottom: 0;
	padding: 0;
}

.bg-soft {
	background-color: var(--color-background-soft);
}

.bg-mute {
	background-color: var(--color-background-mute);
}

.bg-accent {
	background-color: var(--color-accent);
}

// make a few options for line clamp with different line numbers. iterate with scss
@for $i from 1 through 5 {
	.line-clamp-#{$i} {
		-webkit-line-clamp: $i;
		line-clamp: $i;
		display: -webkit-box;
		-webkit-box-orient: vertical;
		overflow: hidden;
	}
}

.text-ellipsis {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}
.text-muted {
	opacity: .7;
}
.text-small {
	font-size: 0.8em;
}
.text-capitalize {
	text-transform: capitalize;
}

.text-primary {
	color: var(--p-primary-color);
}

.text-upper, .text-upper * {
	text-transform: uppercase;
}
.text-cap, .text-cap * {
	text-transform: capitalize;
}

.link {
	cursor: pointer;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

.pi {
	--p-icon-size: 1em;
	font-size: inherit;
}



.spin {
	animation: spin 1500ms linear infinite;
}

@keyframes spin {
	from {
		transform: rotate(0deg);
	}

	to {
		transform: rotate(360deg);
	}
}


.material-symbols-outlined {
	font-size: 1.2em;
}


.no-select {
	user-select: none;
}

.square {
	aspect-ratio: 1;
}



.flex-column {
	display: flex;
}

.flex-row-center {
	@extend .flex;
	@extend .align-items-center;
}

.flex-row-stretch {
	@extend .flex;
	@extend .align-items-stretch;
}

.flex-col-center {
	@extend .flex;
	@extend .flex-column;
	@extend .justify-content-center;
}

.flex-center-all {
	@extend .flex;
	@extend .align-items-center;
	@extend .justify-content-center;
}


.absolute-full {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.bg-contain {
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}

.bg-cover {
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}


:root {
	--p-text-color: var(--color-text) !important;
	--p-text-hover-color: var(--color-text) !important;

	--p-content-background: var(--color-background) !important;
	--p-content-border-color: var(--color-background-mute) !important;
	--p-overlay-modal-background: var(--color-background-soft) !important;
	--p-overlay-modal-border-color: var(--color-background-mute) !important;
	
	--p-form-field-color: var(--color-text) !important;
	--p-form-field-background: var(--color-background-mute) !important;

	--p-navigation-item-focus-background: var(--color-background-mute) !important;
}






[tv-focus] {
	outline: 2px solid var(--color-contrast) !important;
	outline-offset: 2px !important;
	border-radius: .35rem;
	z-index: 9999;
}



::-webkit-scrollbar {
	width: 8px;
	height: 8px;
}

::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
	background-color: transparent;
}

::-webkit-scrollbar-thumb {
	border-radius: 10px;
	border: 2px solid transparent; /* Add transparent space around the thumb */
	// use box shadow as the background color
	box-shadow: inset 0 0 0 20px var(--color-contrast) !important;
	transition: 500ms;
}


body {
	--p-button-text-secondary-color: #bbb;

	.p-dialog {
		background: rgba(255, 255, 255, 0.1);
		border-color: rgba(255, 255, 255, 0.1);
		backdrop-filter: blur(45px);
	}

	.p-tieredmenu, .p-select-overlay {
		background: #1113;
		border-color: #1113;
		backdrop-filter: blur(15px);

		.p-tieredmenu-item:not(.p-disabled) > .p-tieredmenu-item-content:hover, .p-select-option:not(.p-select-option-selected):not(.p-disabled).p-focus {
			$color: #10b981;
			background: color.adjust($color, $alpha: -0.8) !important;
		}
	}

	.bg-blur {
		background: #3334 !important;
		backdrop-filter: blur(10px) !important;
	}


	.bg-blur-hover {
		border: 1px solid transparent;

		&:hover, &.bg-blur-hover[tv-focus] {
			@extend .bg-blur;
			border-color: #aaa3 !important;
		}
	}

	.p-button[btn-blur] {
		@extend .bg-blur;
		border-color: #aaa3 !important;
		color: var(--p-button-secondary-color);
	}

	.p-button[btn-blur-hover] {
		background-color: transparent;
		border-color: transparent;

		&:hover, &[tv-focus] {
			@extend [btn-blur];
		}
	}


	.p-inputtext[transparent], .p-select[transparent], .p-inputgroupaddon[transparent], .p-datepicker[transparent] > .p-datepicker-input {
		&:not(.p-invalid) {
			background-color: #ffffff08;
			backdrop-filter: blur(25px);
			border-color: #fff3 !important;
		}

		&:hover, &:focus-within, &[tv-focus] {
			background-color: #ffffff11;
		}

		&:focus-within, &[tv-focus] {
			$color: #059669;
			border-color: color.adjust($color, $alpha: -0.8) !important;
		}

		&::placeholder {
			color: #fff6;
		}
	}


	.p-message {
	    backdrop-filter: blur(8px);
		--p-message-info-color: var(--p-blue-100);
		--p-message-info-background: color-mix(in srgb, var(--p-blue-500), transparent 40%);
	}

	.p-toast {
		--p-toast-blur: 5px;

		@mixin toast-variant($variants) {
			@each $type, $color in $variants {
				--p-toast-#{$type}-color: var(--p-#{$color}-100);
				--p-toast-#{$type}-background: color-mix(in srgb, var(--p-#{$color}-400), transparent 40%);
				--p-toast-#{$type}-border-color: color-mix(in srgb, var(--p-#{$color}-300), transparent 40%);
			}
		}

		@include toast-variant((
			info: blue,
			error: red,
			success: green,
			warn: amber,
		));
	}

}


[btn-drop-shadow] > * {
	filter: drop-shadow(0 0 6px #0004);
}

